// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toIncludeAllMembers fails when array values matches the members of the set 1`] = `
"<dim>expect(</><red>received</><dim>).not.toIncludeAllMembers(</><green>expected</><dim>)</>

Expected list to not have all of the following members:
  <green>[2, 1, 3]</>
Received:
  <red>[1, 2, 3]</>"
`;

exports[`.toIncludeAllMembers fails when expected object is not an iterable 1`] = `
"<dim>expect(</><red>received</><dim>).toIncludeAllMembers(</><green>expected</><dim>)</>

Expected list to have all of the following members:
  <green>2</>
Received:
  <red>[1, 2, 3]</>"
`;

exports[`.toIncludeAllMembers fails when given object is not an iterable 1`] = `
"<dim>expect(</><red>received</><dim>).toIncludeAllMembers(</><green>expected</><dim>)</>

Expected list to have all of the following members:
  <green>[1, 2, 3]</>
Received:
  <red>2</>"
`;

exports[`.toIncludeAllMembers fails when iterable values do not contain any of the members of the set 1`] = `
"<dim>expect(</><red>received</><dim>).toIncludeAllMembers(</><green>expected</><dim>)</>

Expected list to have all of the following members:
  <green>[1, 2, 3]</>
Received:
  <red>[4, 5, 6]</>"
`;

exports[`.toIncludeAllMembers fails when iterable values do not contain any of the members of the set 2`] = `
"<dim>expect(</><red>received</><dim>).toIncludeAllMembers(</><green>expected</><dim>)</>

Expected list to have all of the following members:
  <green>[1, 2, 3]</>
Received:
  <red>Set {4, 5, 6}</>"
`;
